style.css
:root{
  --fontsize: 0.85rem;
}

* {
  font-family: Fixedsys Excelsior;
}

*, 
*:after,
*:before {
    margin: 0;
    padding: 0;
    box-sizing: border-box; /* Pone el margen/padding/border en 0, para evitar el que viene por defecto en todos los navegadores */
    text-decoration: none;
}

@font-face {
  font-family: "Fixedsys Excelsior";
  src: url("/rsc/font/Fixedsys\ Excelsior\ 3.01\ Regular.ttf");
}

html, body {
  font-size: 1.65vw;
}

body {
  background-image: url("rsc/img/bg_macintosh.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;

  /*Scrollbar configuracion*/
  --sb-track-color: transparent;
  --sb-thumb-color: #0fff50;
  --sb-size: 10px;

  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
}

body::-webkit-scrollbar {
  width: var(--sb-size);
}

body::-webkit-scrollbar-track {
  background: var(--sb-track-color);
  border-radius: 10px;
}

body::-webkit-scrollbar-thumb {
  background: var(--sb-thumb-color);
  border-radius: 10px;
}

/* Configuracion del marco computadora */
.main_container {
  display: block;
  width: 41vw;
  height: 100vh;
  position: relative;
  margin: 0 auto; 
  border: 3px solid transparent;
}

/* Ventana Principal*/
.main_container__main_window{
  position: relative;
  margin: 10% auto;
  width: 77.5%;
  height: 47.5%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border: 3px solid #0fff50;
  border-radius: 5%;
  cursor: url("/rsc/img/vintage_cursor_default.png"), auto;
  visibility: hidden;
}

.main_container__main_window__text_container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-size: var(--fontsize);
  text-align: justify;
  margin: 0.5rem;
  margin-top: 0.3rem;
  color: #0fff50;
}

.main_container__main_window__text_container p:last-child {
  position: absolute;
  top: 35%;
}

.main_container__main_window__button_container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.main_container__main_window__button_container button {
  background-color: transparent;
  font-size: var(--fontsize);
  color: #0fff50;
  border: none;
  padding: 0.2rem;
}

.main_container__main_window__button_container button:hover {
  background-color: #0fff50;
  color: black;
  cursor: url("/rsc/img/vintage_cursor_pointer.png"), auto;
}

.main_container__main_window__footer {
  display: inline-flex;
  margin: 0.5rem;
  margin-bottom: 0.3rem;
}

.main_container__main_window__footer svg {
  fill: #0fff50;
  width: 0.75rem;
  height: 0.75rem;
  margin-right: 0.3rem; /* En el margen se aplica un cursor*/
}

.main_container__main_window__footer svg:hover {
  fill: #0fff5050;
  cursor: url("/rsc/img/vintage_cursor_pointer.png"), auto;
}

.main_container__main_window__footer p{
  color: #0fff50;
  font-size: 0.75rem;
  text-align: right;
  margin-right: 0; /* Elimina el margen del último elemento */
  margin-left: auto; /* Empuja el tercer elemento hacia la derecha */
}

/* Ventana Secundaria */
.main_container__secondary_window {
  position: relative; 
  z-index: 1;
  display: none;
  position: relative;
  margin: 10% auto;
  height: 47.5%;
  width: 77.5%;
  flex-direction: column;
  justify-content: space-between;
  border: 3px solid #0fff50;
  border-radius: 5%;
  cursor: url("/rsc/img/vintage_cursor_default.png"), auto;
}

/* Configuración del textarea */
.main_container__secondary_window__input_text {
  position: relative; 
  z-index: 0;
  background-color: transparent;
  border-radius: 5%;
  border: 3px solid #0fff50;
  font-size: var(--fontsize);
  color: #0fff50;
  height: 100%;
  margin: 0.5rem 0.5rem 0 0.5rem;
  outline: none;
  resize: none;
  padding: 0.5rem;
  cursor: url("/rsc/img/vintage_cursor_text.png"), auto;
}

/* Configuración del alert que esta encima del textarea */
.main_container__secondary_window__alert {
  position: absolute;
  padding: 0.5rem;
  top: 19.5%;
  left: 20%;
  width: 60%;
  height: 50%;
  display: none;
  flex-direction: column;
  align-items: center;
  border: 3px solid #ECE81A;
  border-radius: 5%;
  z-index: 2;
}

.main_container__secondary_window__alert svg {
  color: #ECE81A;
  width: 50%;
  height: 50%;
}

.main_container__secondary_window__alert p {
  color: #ECE81A;
  text-align: center;
  font-size: 0.75rem;
}

.main_container__secondary_window__input_text:focus {
  outline: none;
  cursor: url("/rsc/img/vintage_cursor_text.png"), auto;
}

.main_container__secondary_window__input_text::placeholder {
  color: #0fff5050;
}

.main_container__secondary_window__input_text:focus::placeholder {
  color: transparent;
}
/* ---------------------------------------------------------- */

/* Configuración del contenedor de botones */
.main_container__secondary_window__buttons_container {
  display: flex;
  justify-content: center;
  margin: 0.5rem
}
/* ------------------------------------------------------- */

/* Configuración de los botones */
.main_container__secondary_window__buttons_container button {
  background-color: transparent;
  font-size: var(--fontsize);
  color: #0fff50;
  width: 50%; /* REVISAR */
  border: 3px solid #0fff50;
  margin: 0.1rem;
}

.main_container__secondary_window__buttons_container button:hover {
  background-color: #0fff50;
  color: black;
  cursor: url("/rsc/img/vintage_cursor_pointer.png"), auto;
}

.main_container__secondary_window__buttons_container button.hover-activo {
  background-color: black;
  color: #0fff5050;
  border-color: #0fff5050;
  cursor: url("/rsc/img/vintage_cursor_default.png"), auto;
}
/* ------------------------------------------------------------ */

/* Estilos de Boton Power*/
.switch {
  display: block;
  background-color: black;
  width: 75px;
  height: 75px;
  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2), 0 0 0.5px 1px black, inset 0 1px 1px -1px white, inset 0 0 1px 7.5px #47434c, inset 0 0 1px 11px black;
  padding: 10px;
  perspective: 700px;
  margin-top: 27%;
  margin-left: 7%;
}

.switch input {
  display: none;
}

.switch input:checked + .button {
  transform: translateZ(40px) rotateX(0deg);
}

.switch input:not(:checked) + .button {
  box-shadow: 0 0px 2px #ff1818;
}

.switch input:not(:checked) + .button .light {
  animation: flicker 0.3s infinite 0.3s;
}

.switch input:checked + .button .shine {
  opacity: 1;
}

.switch input:checked + .button .shadow {
  opacity: 0;
}

.switch .button {
  display: block;
  transition: all 0.3s cubic-bezier(1, 0, 1, 1);
  transform-origin: center center -40px;
  transform: translateZ(0px) rotateX(-0deg);
  transform-style: preserve-3d;
  background-color: #9b0621;
  height: 100%;
  position: relative;
  cursor: pointer;
  background: linear-gradient(#980000 0%, #6f0000 30%, #6f0000 70%, #980000 100%);
  background-repeat: no-repeat;
}

.switch .button::before {
  content: "";
  background: linear-gradient(rgba(255, 255, 255, 0.8) 10%, rgba(255, 255, 255, 0.3) 30%, #650000 75%, #320000) 50% 50%/97% 97%, #b10000;
  background-repeat: no-repeat;
  width: 100%;
  height: 50px;
  transform-origin: top;
  transform: rotateX(-90deg);
  position: absolute;
  top: 0;
}

.switch .button::after {
  content: "";
  background-image: linear-gradient(#650000, #320000);
  width: 100%;
  height: 50px;
  transform-origin: top;
  transform: translateY(50px) rotateX(-90deg);
  position: absolute;
  bottom: 0;
  box-shadow: 0 500px 8px 0px black, 0 80px 20px 0px rgba(0, 0, 0, 0.5);
}

.switch .light {
  opacity: 0;
  animation: light-off 1s;
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: radial-gradient(#ffc97e, #ff1818 40%, transparent 70%); /* Modificado*/
}

.switch .dots {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: radial-gradient(transparent 30%, rgba(101, 0, 0, 0.7) 70%);
  background-size: 5px 5px;
}

.switch .shine {
  transition: all 0.3s cubic-bezier(1, 0, 1, 1);
  opacity: 0.3;
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(white, transparent 0.9%) 50% 50%/97% 97%, linear-gradient(rgba(255, 255, 255, 0.50), transparent 10%, transparent 90%, rgba(255, 255, 255, 0.5)) 50% 50%/97% 97%;
  background-repeat: no-repeat;
}

.switch .shadow {
  transition: all 0.3s cubic-bezier(1, 0, 1, 1);
  opacity: 1;
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(black, transparent 5%) 40% 40%/100% 100%, linear-gradient(rgba(0, 0, 0, 0.6), transparent 50%, transparent 50%, rgba(0, 0, 0, 0.6)) 40% 40%/100% 100%;
  background-repeat: no-repeat;
}

@keyframes flicker {
  0% {
    opacity: 1;
  }

  80% {
    opacity: 0.8;
  }

  100% {
    opacity: 1;
  }
}

@keyframes light-off {
  0% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }
}

/* -------------------------------- */

@media only screen and (width <= 1440px) and (height <= 1024px) {

  :root{
    --fontsize: 1.1rem;
  }

  .main_container {
    width: 52vw;
  }

  .main_container__main_window {
    margin: 13% auto;
    height: 45.5%;
  }

  .main_container__secondary_window {
    margin: 13% auto;
    height: 45.5%;
  }


  .main_container__main_window__footer svg {
    width: 0.9rem;
    height: 1rem;
  }

  .main_container__main_window__footer p {
    font-size: 0.9rem;
  }

  .main_container__secondary_window__alert p {
    font-size: 0.9rem;
  }
}

